--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -73,6 +73,7 @@ body {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .price-rating {
